fix the image overlapping the text on bio

--- a/src/styles/AboutMe.css
+++ b/src/styles/AboutMe.css
@@ -2,7 +2,7 @@
 
 .img-container img {
     border-radius: 1rem;
-    width: auto;
+    width: 100%;
 }
 
 .bio {
